# Weather-parser

./: .env  .gitignore  .gitlab-ci.yml  Makefile  README.md  cache.pickle  pyproject.toml  setup.cfg
tests/: conftest.py  constants.py  test_weather.py
weather/: __main__.py  constants.py  weather.py
